src/objects/CF_Permission_Mapping__c 2.object
<CustomObject>
    <description>This Permission Set is provided for Regional Application Administrators in order for them to have elevated rights.  This enables them to create VA Organization (Office) Accounts, VA Organization (Staff) Contacts and access the wizard in order to grant Applications to users.</description>
    <label>Permission Mapping</label>
    <nameField>
        <label>Permission Sets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permission Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Application_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Level</label>
        <referenceTo>CF_Application_Level__c</referenceTo>
        <relationshipName>Permission_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTC_Application__c</fullName>
        <description>To associate the DTC Application to the Permission Sets.</description>
        <label>DTC Application</label>
        <referenceTo>DTC_Application__c</referenceTo>
        <relationshipName>VIEWS_Permission_Sets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Permission_Set_API_Name__c</fullName>
        <description>Holds the API name of the Permission Set</description>
        <label>Permission Set API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_ID__c</fullName>
        <label>Permission Set ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Package_License</fullName>
        <active>true</active>
        <label>Package License</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permission_Sets_License</fullName>
        <active>true</active>
        <description>Permission Sets License needed for the user</description>
        <label>Permission Sets License</label>
    </recordTypes>
    <recordTypes>
        <fullName>VALERI_Groups</fullName>
        <active>true</active>
        <description>Give names of the groups to be assigned to the user</description>
        <label>Groups</label>
    </recordTypes>
    <recordTypes>
        <fullName>VALERI_Permission_Sets</fullName>
        <active>true</active>
        <description>Permission Sets to be associated to the user</description>
        <label>Permission Sets</label>
    </recordTypes>
</CustomObject>